Response to the command go.cd.authorization.is-valid-user. Pending to how to handle roles.