@@ -1,7 +1,7 @@
 apply plugin: "java"
 
 group = "cd.go"
-version = "0.2.1"
+version = "0.2.2"
 
 project.ext.pluginDesc = [
     id         : "cd.go.authorization.cognito-mfa-singlestep",
@@ -14,14 +14,13 @@ project.ext.pluginDesc = [
 ]
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_1_9
+    targetCompatibility = JavaVersion.VERSION_1_9
 }
 
 repositories {
-//  jcenter()
     mavenCentral()
-//  mavenLocal()
+    mavenLocal()
 }
 
 dependencies {
@@ -33,13 +32,15 @@ dependencies {
     implementation group: "com.amazonaws", name: "aws-java-sdk-cognitoidp", version: "1.12.450"
 
     testImplementation group: "cd.go.plugin", name: "go-plugin-api", version: "19.2.0"
-    testImplementation group: "junit", name: "junit", version: "4.13.1"
+    testRuntimeOnly group: "org.junit.vintage", name: "junit-vintage-engine", version: "5.8.2"
+    testImplementation group: "org.junit.jupiter", name: "junit-jupiter", version: "5.8.2"
+    testImplementation group: "org.mockito", name: "mockito-core", version: "5.4.0"
+    testImplementation group: "org.mockito", name: "mockito-junit-jupiter", version: "5.4.0"
+    testRuntimeOnly group: "org.junit.jupiter", name: "junit-jupiter-engine", version: "5.2.0"
+    testImplementation group: "org.hamcrest", name: "hamcrest", version: "2.2"
     testImplementation group: "org.assertj", name: "assertj-core", version: "3.24.0"
-    testImplementation group: "org.mockito", name: "mockito-core", version: "2.25.1"
-    testImplementation group: "org.powermock", name: "powermock-module-junit4", version: "2.0.9"
-    testImplementation group: "org.powermock", name: "powermock-api-mockito2", version: "2.0.9"
-    testImplementation group: "org.hamcrest", name: "hamcrest-library", version: "1.3"
     testImplementation group: "org.skyscreamer", name: "jsonassert", version: "1.5.0"
+
 }
 
 processResources {
@@ -55,12 +56,19 @@ processResources {
 }
 
 jar {
-    from(configurations.implementation) {
+    from(configurations.runtimeClasspath) {
         into "lib/"
     }
+}
 
-//    This is useful for debugging
-    from(sourceSets.main.java) {
-        into "/"
-    }
+tasks.withType(Test).configureEach {
+    jvmArgs([
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED"
+    ])
+}
+
+test {
+    useJUnitPlatform()
 }
